--- a/index.html
+++ b/index.html
@@ -35,26 +35,21 @@
         <source src="hbd.mp3"></source>
 	   Your browser isn't invited for super fun audio time.
     </audio>
-    <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">H</h2>
-    </div>
-    <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">P</h2>
+     <div class="balloons text-center" id="b2">
+    	<h3 style="color:#0719D4;">CHÚC</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">B</h2>
+    	<h3 style="color:#D14D39;">MỪNG</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">D</h2>
+    	<h3 style="color:#8FAD00;">SINH</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">2</h2>
+    	<h3 style="color:#8377E4;">NHẬT</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">B</h2>
+    	<h3 style="color:#99C96A;">BI</h2>
     </div>
-    <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">I</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
