--- a/index.html
+++ b/index.html
@@ -35,20 +35,30 @@
         <source src="hbd.mp3"></source>
 	   Your browser isn't invited for super fun audio time.
     </audio>
-     <div class="balloons text-center" id="b2">
-    	<h3 style="color:#0719D4;">CHÚC</h2>
+      <div class="balloons text-center" id="b1">
+    	<h3 style="color:#F2B300;"></h3>
+    </div>
+    <div class="balloons text-center" id="b2">
+    	<h3 style="color:#0719D4;"></h3>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h3 style="color:#D14D39;">MỪNG</h2>
+    	<br/>
+    	<h3 style="color:#D14D39;">HAPPY</h3>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h3 style="color:#8FAD00;">SINH</h2>
+    	<br/>
+    	<h3 style="color:#8FAD00;">BIRTH</h3>
+        <h3 style="color:#8FAD00;">DAY</h3>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h3 style="color:#8377E4;">NHẬT</h2>
+    <br/>
+    	<h3 style="color:#8377E4;">BI</h3>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h3 style="color:#99C96A;">BI</h2>
+    	<h3 style="color:#99C96A;"></h3>
+    </div>
+    <div class="balloons text-center" id="b7">
+    	<h3 style="color:#20CFB4;"></h3>
     </div>
     </div>
 
